--- a/src/templates/photo-card.hbs
+++ b/src/templates/photo-card.hbs
@@ -46,7 +46,8 @@ downloads - количество загрузок --}}
 {{#each this}}
 <li class='gallery__item'>
   <div class="photo-card">
-    <img src={{webformatURL}} alt={{tags}} />
+    <img src="{{webformatURL}}" alt="{{tags}}" data-src="{{largeImageURL}}" />
+    </div>
     <div class="stats">
       <p class="stats-item">
         <i class="material-icons">thumb_up</i>
@@ -64,7 +65,7 @@ downloads - количество загрузок --}}
         <i class="material-icons">cloud_download</i>
         {{downloads}}
       </p>
-    </div>
+    
   </div>
 </li>
 {{/each}}
